created and styled the home component

--- a/client-side/src/app/app.component.css
+++ b/client-side/src/app/app.component.css
@@ -19,7 +19,7 @@
 }
 
 p {
-    text-align: left;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
     font-weight: bold;
@@ -40,4 +40,8 @@ p {
     display: flex;
     justify-content: center;
     width: 40vw;
+}
+
+.footer {
+    text-align: left;
 }
