Completed about page with reactive form validation
Still need to connect to a database and service

--- a/client-side/src/app/components/home/home.component.html
+++ b/client-side/src/app/components/home/home.component.html
@@ -59,7 +59,7 @@
             <div class="flex-container col-4">
                 <img [src]="product3" class="product-img">
             </div>
-            <button type="button" class="btn btn-primary col-2 offset-5 mt-5">VIEW ALL PRODUCTS</button>
+            <button type="button" class="btn btn-primary col-2 offset-5 mt-5" routerLink="/shop">VIEW ALL PRODUCTS</button>
         </div>
        
     </div>
