--- a/client-side/src/app/app.component.html
+++ b/client-side/src/app/app.component.html
@@ -13,21 +13,21 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/home" routerLinkActive="active">Home</a>
+          <a class="nav-link" aria-current="page" routerLink="/" routerLinkActive="active">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" routerLinkActive="active">About</a>
+          <a class="nav-link" routerLink="/about" routerLinkActive="active">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" routerLinkActive="active">Blog</a>
+          <a class="nav-link" routerLinkActive="active">Blog</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+          <a class="nav-link dropdown-toggle" routerLink="/shop" role="button" data-bs-toggle="dropdown" aria-expanded="false"
             routerLinkActive="active">
             Shop
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Shop Here</a></li>
+            <li><a class="dropdown-item" routerLink="/shop">Shop Here</a></li>
             <li><a class="dropdown-item" href="https://www.teacherspayteachers.com/Store/Steam-Vault" target="_blank">Shop TPT</a></li>
           </ul>
         </li>
@@ -58,7 +58,7 @@
   </div>
 </div>
 
-<app-home></app-home>
+<router-outlet></router-outlet>
 
 
 
