updated product and shop components

--- a/client-side/src/app/components/about/about.component.html
+++ b/client-side/src/app/components/about/about.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="row">
-    <h1 class="col-6 offset-5">About</h1>
+    <h1 class="col-6 offset-5 my-5">About</h1>
     <!-- Right Side -->
     <div class="col-5 offset-2 my-4 p-4">
         <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, rerum velit sit inventore, ut dolorem hic accusantium quidem minus id voluptatibus, nihil totam quasi et libero? Quia velit alias eaque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa recusandae fugiat placeat eos debitis impedit, perferendis aliquid dignissimos! Facilis impedit ipsa iste nulla vero aut tempore necessitatibus nihil rem possimus! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste alias officiis expedita deleniti ad nesciunt similique consectetur labore, quidem totam necessitatibus corporis sit debitis enim. Aliquam libero voluptas molestias fugit? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iure esse molestias similique dolores dicta reiciendis, voluptas illum ad ea laudantium nisi mollitia fuga, in ut quis reprehenderit sunt sed.</p></div>
