--- a/client-side/src/app/app.component.html
+++ b/client-side/src/app/app.component.html
@@ -18,11 +18,8 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/about" routerLinkActive="active">About</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active">Blog</a>
-        </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" routerLink="/shop" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+          <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false"
             routerLinkActive="active">
             Shop
           </a>
