updated models, shop page, and product page

--- a/client-side/src/app/app.component.html
+++ b/client-side/src/app/app.component.html
@@ -37,9 +37,9 @@
 </nav>
 
 <!-- SubNav -->
-<div class="align mt-3">
+<div class="align">
   <img [src]="banner" id="banner">
-  <div id="subnav" class="p-2">
+  <div id="subnav" class="p-1">
     <div><img [src]="math" class="widget">
       <p>Math</p>
     </div>
