--- a/client-side/src/app/components/checkout/checkout.component.html
+++ b/client-side/src/app/components/checkout/checkout.component.html
@@ -44,7 +44,7 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Add me to the email list to get exclusive offers on future products.</label>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="button" class="btn btn-primary">Complete Payment</button>
           </form>
     </div>
 
