--- a/client-side/src/app/components/product/product.component.html
+++ b/client-side/src/app/components/product/product.component.html
@@ -13,16 +13,16 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img [src]="math" class="d-block w-100" alt="...">
+            <img src="{{product.cover}}" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img [src]="science" class="d-block w-100" alt="...">
+            <img src="{{product.preview1}}" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img [src]="art" class="d-block w-100" alt="...">
+            <img src="{{product.preview2}}" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img [src]="tech" class="d-block w-100" alt="...">
+            <img src="{{product.preview3}}" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -40,9 +40,9 @@
 
     <!-- Product Info on the Left -->
     <div class="col-4 product-info p-4">
-      <h1>product.name</h1>
-      <h3>product.price | currency</h3>
-      <p>product.description_short</p>
+      <h1>{{product.name}}</h1>
+      <h3>{{product.price | currency}}</h3>
+      <p>{{product.description_short}}</p>
 
       <!-- More Details Below -->
       <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -53,7 +53,7 @@
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">product.description_long</div>
+            <div class="accordion-body">{{product.description_long}}</div>
           </div>
         </div>
         <div class="accordion-item">
@@ -75,7 +75,8 @@
       </div>
 
       <div class="text-center mt-4">
-        <button type="button" class="btn btn-primary">Add to Cart</button>
+        <button type="button" class="btn btn-primary mx-4" (click)="onClick()">Add to Cart</button>
+        <button type="button" class="btn btn-warning mx-4" (click)="returnToShop()">Return to Shop</button>
       </div>
 
     </div>
