created tags for each product (grade, subject, type)

--- a/client-side/src/app/app.component.html
+++ b/client-side/src/app/app.component.html
@@ -39,7 +39,7 @@
 <!-- SubNav -->
 <div class="align">
   <img [src]="banner" id="banner">
-  <div id="subnav" class="p-1">
+  <div id="subnav" class="p-1 mt-3">
     <div><img [src]="math" class="widget">
       <p>Math</p>
     </div>
