--- a/client-side/src/app/components/product/product.component.html
+++ b/client-side/src/app/components/product/product.component.html
@@ -78,7 +78,7 @@
       <!-- Incrementor -->
       <div class="text-center">
         <button type="button">-</button>
-        <input type="text">
+        <input type="number">
         <button type="button">+</button>
       </div>
 
