--- a/client-side/src/app/components/shop/shop.component.html
+++ b/client-side/src/app/components/shop/shop.component.html
@@ -4,32 +4,39 @@
         <div id="filter-outline" class="mt-5">
             <h2 class="text-center" id="filter-title">Filter</h2>
             <div class="row">
-                <form class="col-6 offset-1">
-                    <h4>Price</h4>
+                <form class="col-6 offset-1" [formGroup]="filterForm">
+                    <!-- <h4>Price</h4>
                     <input type="checkbox"> Less than $5 <br>
                     <input type="checkbox"> $5 - $10 <br>
                     <input type="checkbox"> $11 - $20 <br>
                     <input type="checkbox"> $20 - $50 <br>
-                    <input type="checkbox"> $50 or more <br><br>
+                    <input type="checkbox"> $50 or more <br><br> -->
 
                     <h4>Grade</h4>
-                    <input type="checkbox"> Grade 7 <br>
-                    <input type="checkbox"> Grade 8 <br>
-                    <input type="checkbox"> Grade 7/8 <br><br>
+                    <input type="radio" name="grade" value="6" formControlName="grade_number"> Grade 6 <br>
+                    <input type="radio" name="grade" value="7" formControlName="grade_number"> Grade 7 <br>
+                    <input type="radio" name="grade" value="8" formControlName="grade_number"> Grade 8 <br>
+                    <br>
 
-                    <h4>Subject</h4>
+                    <h4>Subjects</h4>
+                    <select name="subject" formControlName="subject_name">
+                        <option selected disabled>Choose a Subject</option>
+                        <option *ngFor="let subject of subjects" [value]="subject.subject_name">{{subject.subject_name}}</option>
+                    </select> <br><br>
+
+                    <!-- <h4>Subject</h4>
                     <input type="checkbox"> Math <br>
                     <input type="checkbox"> Science <br>
                     <input type="checkbox"> Art <br>
-                    <input type="checkbox"> Technology <br><br>
+                    <input type="checkbox"> Technology <br><br> -->
 
                     <h4>Type</h4>
-                    <select>
+                    <select name="type"  formControlName="type_name">
                         <option selected disabled>Choose a product type</option>
-                        <option *ngFor="let type of types">{{type.type_name}}</option>
+                        <option *ngFor="let type of types" [value]="type.type_name">{{type.type_name}}</option>
                     </select> <br><br>
 
-                    <button type="button" class="btn btn-primary">Apply Changes</button><br><br>
+                    <button type="submit" class="btn btn-primary" (click)="onClick()">Apply Changes</button><br><br>
 
                 </form>
             </div>
@@ -43,9 +50,11 @@
             <div class="col-4" *ngFor="let product of products">
                 <!-- Product Card 1-->
                 <div class="card col-4 offset-4 mx-4 my-4" style="width: 18rem;">
-                    <a [routerLink]="['/products', product.id]"><img src="{{product.cover}}" class="card-img-top" alt="..."></a>
+                    <a [routerLink]="['/products', product.id]"><img src="{{product.cover}}" class="card-img-top"
+                            alt="..."></a>
                     <div class="card-body">
-                        <h5 class="card-title text-center"><a [routerLink]="['/products', product.id]">{{product.name}}</a></h5>
+                        <h5 class="card-title text-center"><a
+                                [routerLink]="['/products', product.id]">{{product.name}}</a></h5>
                         <p class="card-text text-center">{{product.price | currency }}</p>
                         <p *ngFor="let g of grades"></p>
                     </div>
