created basic checkout

--- a/client-side/src/app/app.component.html
+++ b/client-side/src/app/app.component.html
@@ -33,6 +33,7 @@
         </li>
       </ul>
     </div>
+    <button class="btn btn-danger" routerLink="/cart">Checkout</button>
   </div>
 </nav>
 
