--- a/client-side/src/app/components/product/product.component.html
+++ b/client-side/src/app/components/product/product.component.html
@@ -85,6 +85,7 @@
       <!-- Buttons -->
       <div class="text-center mt-4">
         <button type="button" class="btn btn-primary mx-4" (click)="onClick()">Add to Cart</button>
+        <button type="button" class="btn btn-success mx-4" (click)="addToCart(product)">Buy</button>
         <button type="button" class="btn btn-warning mx-4" (click)="returnToShop()">Return to Shop</button>
       </div>
 
