--- a/client-side/src/app/app.component.css
+++ b/client-side/src/app/app.component.css
@@ -1,8 +1,8 @@
 .sale {
-    background-color: #00509d;
+    color: #00509d;
     display: flex;
     justify-content: center;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .active {
@@ -28,7 +28,7 @@ p {
 .align{
     display: flex;
     justify-content: space-around;
-    border-bottom: 2px solid black;
+    /* border-bottom: 2px solid black; */
 }
 
 #subnav {
@@ -46,3 +46,5 @@ p {
 .footer {
     text-align: left;
 }
+
+
