--- a/client-side/src/app/components/home/home.component.css
+++ b/client-side/src/app/components/home/home.component.css
@@ -17,6 +17,20 @@ h2 {
     height: 600px;
 }
 
+.carousel .carousel-item {
+    height: 650px;
+  }
+  
+  .carousel-item img {
+    height: 100% !important;
+    width:  100% !important;
+  }
+
+#hero-carousel{
+    width: 100vw;
+
+} 
+
 img {
     width: 100vw;
     height: 60vh;
