--- a/client-side/src/app/components/home/home.component.html
+++ b/client-side/src/app/components/home/home.component.html
@@ -1,9 +1,33 @@
 <!-- Hero Section -->
-<section>
+<!-- <section>
 <div id="hero">
     <h1 class="pt-5">INTERACTIVE. ENGAGING. SIMPLE.</h1>
     <h2>Fully planned activities, so you don't have to.</h2>
 </div>
+</section> -->
+
+<section id="hero-carousel">
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/assets/1.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/assets/2.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/assets/3.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
 </section>
 
 <!-- Freebie Section -->
