--- a/client-side/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/client-side/src/app/components/shopping-cart/shopping-cart.component.html
@@ -1,9 +1,30 @@
 <h3 class="text-center">Cart</h3>
 
-<div class="cart-item" *ngFor="let item of items">
-    <div class="row">
-        <span class="col-3">{{item.name}}</span>
-        <span class="col-3">{{item.price | currency}}</span>
-    </div>
-   
+<h3>Your Orders</h3>
+
+<div class="cart-total">
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Product Name</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Price</th>
+            <th scope="col">Remove Product</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let product of products">
+            <th scope="row">{{product.id}}</th>
+            <td>{{product.name}}</td>
+            <td>{{product.quantity}}</td>
+            <td>{{product.price | currency}}</td>
+            <td><button type="button" class="btn btn-primary" (click)="removeFromCart(product)">Remove Product</button></td>
+          </tr>
+        </tbody>
+      </table>
+
+    <button type="button" class="btn btn-primary mx-4" (click)="onClick()">Proceed to Checkout</button>
+    <button type="button" class="btn btn-primary mx-4" (click)="clearCart()">Clear Cart</button>
+    
 </div>
