--- a/client-side/src/app/components/shop/shop.component.html
+++ b/client-side/src/app/components/shop/shop.component.html
@@ -44,7 +44,7 @@
                         <h5 class="card-title text-center"><a
                                 [routerLink]="['/products', product.id]">{{product.name}}</a></h5>
                         <h5 class="card-text text-center">{{product.price | currency }}</h5>
-                        <input [(ngModel)]="product.quantity" [ngModelOptions] ="{standalone: true}" (change)="changeSubTotal(product)" type="number" min="1" value="1">
+                        <input [(ngModel)]="product.quantity" [ngModelOptions] ="{standalone: true}" (change)="changeSubTotal(product)" type="number" min="1" value="1" placeholder="Quantity">
                         <h6>SubTotal: {{product.quantity*product.price | currency}}</h6>
                        <button type="button" class="btn btn-success col-12" (click)="addToCart(product)" (click)="addToCart(product)">Add to Cart</button>
                     </div>
